gitops/config/auditique/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditique-web
  namespace: auditique
spec:
  selector:
    app: auditique-web
  ports:
    - port: 80
      targetPort: 80
      name: http
