gitops/config/auditique/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auditique-web
  namespace: auditique
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auditique.reckeweg.io
      secretName: auditique-tls
  rules:
    - host: auditique.reckeweg.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auditique-web
                port:
                  number: 80
